Trying the popup video to work
Not successful, but I'll figure it out

--- a/Portfilio/Views/Home/Index.cshtml
+++ b/Portfilio/Views/Home/Index.cshtml
@@ -9,7 +9,8 @@
     <div class="info">
         <div class="container text-center">
             <h1 class="fs-60">Humble | Curious | Dedication</h1>
-            <a class="btn btn-md video-popup" href="https://www.youtube.com/watch?v=c7nRTF2SowQ">
+            <!-- Need to figure a different to do a popup video -->
+            <a class="btn btn-md video" href="https://www.youtube.com/watch?v=edYCtaNueQY&t=3s">
                 <i class="fas fa-play-circle"></i>
                 Watch
             </a>
